# crm

./: .gitguardian.yaml  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  D365.md  LICENSE  README.md  crm.spec  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  setup.py
.claude/: settings.json
.claude/agents/: docs-sync.md
.claude/hooks/: block_protected_files.py  destructive_op_gate.py  pyright_strict_check.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: build.yml  bump-guard.yml  ci.yml  docs.yml  e2e.yml  release.yml  semantic-release.yml
.out-of-scope/: bpf-definition-via-webapi.md  environment-admin.md  oauth-adfs-ifd.md  plugin-step-clone.md  raw-http-passthrough.md  soap-only-messages.md  solution-clone.md
contributing/skill-and-cli/: index.html
crm/: __init__.py  __main__.py  cli.py
crm/commands/: __init__.py  _helpers.py  _tty.py  action.py  app.py  apply.py  async_ops.py  audit.py  batch.py  chart.py  completion.py  completion_registry.py  connection.py  connectionrole.py  dashboard.py  data.py  describe.py  dup.py  entity.py  fieldsec.py  form.py  init.py  metadata.py  plugin.py  profile.py  query.py  repl.py  report.py  ribbon.py  scaffold.py  security.py  self_update.py  session.py  sitemap.py  skill.py  skill_registry.py  sla.py  solution.py  theme.py  translation.py  (+3 more)
crm/core/: apply.py  appmodule.py  async_ops.py  audit.py  batch.py  bulk_delete.py  charts.py  clone.py  connection.py  connectionrole.py  dashboard.py  data_import.py  dependencies.py  destructive.py  dup.py  entity.py  entity_names.py  export.py  export_spec.py  fieldsec.py  forms.py  keyring_store.py  logging_setup.py  lookup_bind.py  mappings.py  metadata.py  metadata_attrs.py  metadata_cache.py  metadata_constraints.py  metadata_update.py  optionsets.py  plugin.py  query.py  references.py  relationships.py  report.py  ribbon.py  scaffold.py  security.py  session.py  (+15 more)
crm/skills/: SKILL.md
crm/tests/: TEST.md  conftest.py  skill_coverage.py  test_action_function.py  test_active_profile_restore.py  test_admin_headers.py  test_apply.py  test_appmodule.py  test_async_ops.py  test_audit.py  test_audit_core.py  test_audit_integration.py  test_auth_scheme.py  test_batch.py  test_bulk_delete.py  test_bulk_delete_cmd.py  test_chart_cmd.py  test_charts.py  test_check_bump_label.py  test_cli_encoding.py  test_cli_offline_smoke.py  test_clone.py  test_cmd_metadata_dependencies.py  test_cmd_solution_dependencies.py  test_completion.py  test_concise_render.py  test_confirm_guard_mutating_verbs.py  test_connection_cmd.py  test_connection_core.py  test_connection_doctor.py  test_connection_doctor_cmd.py  test_connectionrole.py  test_connectionrole_cmd.py  test_context_links.py  test_core.py  test_crm_init.py  test_d365_errors_enrich.py  test_dashboard.py  test_dashboard_cmd.py  test_data_import.py  (+141 more)
crm/utils/: d365_backend.py  d365_types.py  repl_skin.py
docs/: index.html  index.md
docs/adr/: 0001-cli-exit-code-contract.md  0002-create-verbs-auto-wire-profile.md  0003-web-api-only-no-soap.md  0004-no-codegen-wrapper-document-external-tools.md  (+18 more)
evals/: __init__.py
scripts/: build.ps1  build.sh  check_bump_label.py  check_tag_version.py  cloud-ship-bootstrap.sh  e2e_all.py  install.ps1  install.sh  render_enhancement_report.py
search/: search_index.json
(+278 files in other folders)
