# python-semantic-release config only. Intentionally NO [build-system] table:
# the project is still built from setup.py (setuptools legacy backend), and the
# release pipeline (.github/workflows/release.yml, crm.spec) is unchanged.
[tool.semantic_release]
# Bump both version sites on every release (see CLAUDE.md "Release").
version_variables = [
    "crm/__init__.py:__version__",
    "setup.py:version",
]
# Graduated to 1.0 (#130). With allow_zero_version=false PSR forces the next
# release (driven by this milestone's feat: commits) to 1.0.0, and normal semver
# resumes thereafter (breaking → major). major_on_zero is moot once >= 1.0.
allow_zero_version = false
major_on_zero = true
# release.yml owns the binary build; PSR must not build.
build_command = ""
commit_message = "chore(release): v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.changelog]
mode = "update"
